--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         <div class="dicas">
 
             <div class="section-title">
-              <h2><strong>Dicas para cuidar um gatinho!</strong></h2>
-            </div>
-        
+                <h2 style="text-align: center;"><strong>Dicas de como cuidar de um gatinho!</strong></h2>
+              </div>
+
             <div class="row">
               <div class="col-lg-4" data-aos="fade-right">
                 <img src="imagens/gatos.jpg.jpeg" class="img-fluid" alt="">
