--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="#"> Blog</a></li>
             <li><a href="#bienvenidos"> Dicas para adoção</a></li>
             <li><a href="#servicios"> Dicas para Cuidar</a></li>
-            <li><a href="#info"> Sobre a criação do blog</a></li>
+            <li><a href="#info"> Coisas para fazer com seu gato</a></li>
             <li><a href="#contacto"> Contato</a></li>
           </ul>
         </nav>
